--- a/src/index.scss
+++ b/src/index.scss
@@ -1,18 +1,14 @@
 html {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: inherit;
-  -moz-box-sizing: inherit;
   box-sizing: inherit;
 }
 
-html {
+body {
   font-family: sans-serif;
   font-size: 16px;
 }
